--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,7 @@ body
 .top-section
 {
     height:45rem;
-    padding-top: 7rem; 
+    padding-top: 5rem; 
 
 
 }
@@ -59,6 +59,7 @@ body
     padding: 10px;
     color: #FFFFFF;
     font-size: 16px;
+    border: none;
     
 }
 
